[gd_scene load_steps=7 format=2]

[ext_resource path="res://ProficiencySelectionHUD.gd" type="Script" id=1]
[ext_resource path="res://assets/interfaces/ripost-indicator.png" type="Texture" id=2]
[ext_resource path="res://interface/ProficiencyIcon.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/roboto_24.tres" type="DynamicFontData" id=4]
[ext_resource path="res://interface/new-prof-select/datamodel/ProficiencyDataModel.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="ProficiencySelectionHUD" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="bgd" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="advantageIcon" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.505882 )
margin_left = 52.986
margin_top = 40.0444
margin_right = 132.986
margin_bottom = 120.044

[node name="disadvantageIcon" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.505882 )
margin_left = 224.986
margin_top = 40.0444
margin_right = 304.986
margin_bottom = 120.044

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_left = 34.0
margin_top = 40.0
margin_right = 159.0
margin_bottom = 120.0
rect_min_size = Vector2( 125, 80 )
alignment = 1

[node name="advProfLabel" type="Label" parent="HBoxContainer3"]
margin_top = 2.0
margin_right = 125.0
margin_bottom = 77.0
rect_min_size = Vector2( 125, 75 )
custom_fonts/font = SubResource( 1 )
text = "filler"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
margin_left = 200.2
margin_top = 39.9
margin_right = 325.2
margin_bottom = 119.9
rect_min_size = Vector2( 125, 80 )
alignment = 1

[node name="disProfLabel" type="Label" parent="HBoxContainer4"]
margin_right = 127.0
margin_bottom = 80.0
rect_min_size = Vector2( 127, 80 )
custom_fonts/font = SubResource( 1 )
text = "filler"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 20.0
margin_right = 170.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
alignment = 1

[node name="advLabel" type="Label" parent="HBoxContainer"]
margin_left = 35.0
margin_top = 8.0
margin_right = 115.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Strength"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_left = 193.0
margin_right = 343.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 0 )
alignment = 1

[node name="disLabel" type="Label" parent="HBoxContainer2"]
margin_left = 29.0
margin_top = 8.0
margin_right = 121.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Weakness"

[node name="ProficiencyDataModel" parent="." instance=ExtResource( 5 )]
